--- a/src/registrar/templates/application_intro.html
+++ b/src/registrar/templates/application_intro.html
@@ -8,9 +8,9 @@
     <form class="usa-form usa-form--extra-large" method="post" novalidate>
         {% csrf_token %}
 
-        <h1>You're about to start your .gov domain request.</h1>
-        <p>You don't have to complete the process in one session. You can save what you enter and come back to it when you're ready.</p>
-        <p>We'll use the information you provide to verify your organization's eligibility for a .gov domain. We'll also verify that the domain you request meets our guidelines.</p>
+        <h1>You’re about to start your .gov domain request.</h1>
+        <p>You don’t have to complete the process in one session. You can save what you enter and come back to it when you’re ready.</p>
+        <p>We’ll use the information you provide to verify your organization’s eligibility for a .gov domain. We’ll also verify that the domain you request meets our guidelines.</p>
         <h2>Time to complete the form</h2>
         <p>If you have <a href="{% public_site_url 'domains/before/#information-you%E2%80%99ll-need-to-complete-the-domain-request-form' %}" target="_blank" class="usa-link">all the information you need</a>,
            completing your domain request might take around 15 minutes.</p>
