Update 500 error text

--- a/src/registrar/templates/500.html
+++ b/src/registrar/templates/500.html
@@ -9,10 +9,10 @@
   <div class="grid-row grid-gap">
     <div class="tablet:grid-col-6 usa-prose margin-bottom-3">
       <h1>
-        {% translate "We're having some trouble" %}
+        {% translate "We're having some trouble." %}
       </h1>
       <h2>
-        {% translate "Status 500 – server error" %}
+        {% translate "500 error" %}
       </h2>
       {% if friendly_message %}
         <p>{{ friendly_message }}</p>
