--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -52,7 +52,8 @@
           </th>
           <td data-sort-value="{{ domain.expiration_date|date:"U" }}" data-label="Expires">{{ domain.expiration_date|date }}</td>
           <td data-label="Status">
-            {% if domain.is_expired %}
+            {# UNKNOWN domains would not have an expiration date and thus would show 'Expired' #}
+            {% if domain.is_expired and domain.state != "unknown" %}
                 Expired
             {% elif domain.state == "unknown" or domain.state == "dns needed"%}
                 DNS needed
