--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -81,7 +81,6 @@
               {% endif %}
             </a>
           </td>
-          <td></td>
         </tr>
         {% endfor %}
       </tbody>
@@ -141,32 +140,34 @@
             </a>
           </td>
           <td>
-            <a
-              id="button-toggle-delete-domain-alert-{{ forloop.counter }}"
-              href="#toggle-delete-domain-alert-{{ forloop.counter }}"
-              class="usa-button--unstyled"
-              aria-controls="toggle-delete-domain-alert-{{ forloop.counter }}"
-              data-open-modal
-            >
-              <svg class="usa-icon" aria-hidden="true" focusable="false" role="img" width="24">
-                <use xlink:href="{%static 'img/sprite.svg'%}#delete"></use>
-              </svg>
-              Delete
-            </a>
+            {% if application.status == "started" or application.status == "withdrawn"  %}
+              <a
+                id="button-toggle-delete-domain-alert-{{ forloop.counter }}"
+                href="#toggle-delete-domain-alert-{{ forloop.counter }}"
+                class="usa-button--unstyled"
+                aria-controls="toggle-delete-domain-alert-{{ forloop.counter }}"
+                data-open-modal
+              >
+                <svg class="usa-icon" aria-hidden="true" focusable="false" role="img" width="24">
+                  <use xlink:href="{%static 'img/sprite.svg'%}#delete"></use>
+                </svg>
+                Delete
+              </a>
 
-            <div
-              class="usa-modal"
-              id="toggle-delete-domain-alert-{{ forloop.counter }}"
-              aria-labelledby="Are you sure you want to continue?"
-              aria-describedby="User will be removed"
-              data-force-action
-            >
-              <form method="POST" action="{% url "application-delete" pk=application.id %}">
-                {% with heading="Are you sure you want to delete "|add:application.requested_domain.name|add:"?" %}
-                  {% include 'includes/modal.html' with modal_heading=heading  modal_description="This will remove the domain request from the .gov registrar. This action cannot be undone." modal_button=modal_button|safe %}
-                {% endwith %}
-              </form>
-            </div>
+              <div
+                class="usa-modal"
+                id="toggle-delete-domain-alert-{{ forloop.counter }}"
+                aria-labelledby="Are you sure you want to continue?"
+                aria-describedby="User will be removed"
+                data-force-action
+              >
+                <form method="POST" action="{% url "application-delete" pk=application.id %}">
+                  {% with heading="Are you sure you want to delete "|add:application.requested_domain.name|add:"?" %}
+                    {% include 'includes/modal.html' with modal_heading=heading  modal_description="This will remove the domain request from the .gov registrar. This action cannot be undone." modal_button=modal_button|safe %}
+                  {% endwith %}
+                </form>
+              </div>
+            {% endif %}
           </td>
         </tr>
         {% endfor %}
