--- a/src/registrar/templates/application_other_contacts.html
+++ b/src/registrar/templates/application_other_contacts.html
@@ -34,7 +34,7 @@
         {{ forms.1.management_form }}
         {# forms.1 is a formset and this iterates over its forms #}
         {% for form in forms.1.forms %}
-            <fieldset class="usa-fieldset">
+            <fieldset class="usa-fieldset repeatable-form">
             <legend>
                 <h2>Organization contact {{ forloop.counter }} (optional)</h2>
             </legend>
@@ -62,7 +62,7 @@
             </fieldset>
         {% endfor %}
 
-        <button type="submit" name="submit_button" value="save" class="usa-button usa-button--unstyled">
+        <button type="button" class="usa-button usa-button--unstyled" id="add-form">
             <svg class="usa-icon" aria-hidden="true" focusable="false" role="img" width="24" height="24">
             <use xlink:href="{%static 'img/sprite.svg'%}#add_circle"></use>
             </svg><span class="margin-left-05">Add another contact</span>
