Add padding for mobile view

--- a/src/registrar/assets/sass/_theme/_tables.scss
+++ b/src/registrar/assets/sass/_theme/_tables.scss
@@ -29,6 +29,13 @@
   th.action-col-custom-width {
     width: 27% !important;
   }
+
+  // Fix margins in mobile view
+  @media screen {
+    td.tablet-margin-top-5 {
+        margin-top: 40px !important;
+    }
+  }
 }
 
 .dotgov-table {
