--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -147,7 +147,7 @@
             </a>
           </td>
           {% if has_deletable_applications %}
-          <td>
+          <td class="tablet-margin-top-5">
             {% if application.status == "started" or application.status == "withdrawn"  %}
               <a
                 id="button-toggle-delete-domain-alert-{{ forloop.counter }}"
