--- a/src/registrar/assets/sass/_theme/styles.scss
+++ b/src/registrar/assets/sass/_theme/styles.scss
@@ -17,6 +17,7 @@
 @forward "tables";
 @forward "sidenav";
 @forward "register-form";
+@forward "usa-modal";
 
 /*--------------------------------------------------
 --- Admin ---------------------------------*/
