--- a/src/registrar/assets/sass/_theme/_tables.scss
+++ b/src/registrar/assets/sass/_theme/_tables.scss
@@ -27,13 +27,13 @@
   }
 
   th.action-col-custom-width {
-    width: 24.25% !important;
+    width: 24.25%;
   }
 
   // Fix margins in mobile view
   @media screen {
     td.tablet-margin-top-2 {
-        margin-top: 16px !important;
+        margin-top: 16px;
     }
   }
 }
