Remove blue header

--- a/src/registrar/templates/includes/modal.html
+++ b/src/registrar/templates/includes/modal.html
@@ -2,7 +2,7 @@
 
 <div class="usa-modal__content">
     <div class="usa-modal__main">
-        <h2 class="usa-modal__heading blue-header" id="modal-1-heading">
+        <h2 class="usa-modal__heading" id="modal-1-heading">
             {{ modal_heading }}
         </h2>
         <div class="usa-prose">
