--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -157,7 +157,7 @@
               <a
                 id="button-toggle-delete-domain-alert-{{ forloop.counter }}"
                 href="#toggle-delete-domain-alert-{{ forloop.counter }}"
-                class="usa-button--unstyled remove-underline"
+                class="usa-button--unstyled remove-text-no-underline"
                 aria-controls="toggle-delete-domain-alert-{{ forloop.counter }}"
                 data-open-modal
               >
