Update "election" step

--- a/src/registrar/templates/application_org_election.html
+++ b/src/registrar/templates/application_org_election.html
@@ -2,9 +2,11 @@
 {% load field_helpers %}
 
 {% block form_instructions %}
-  <h2 class="margin-bottom-05">Is your organization an election office?</h2>
+  
 
-  <p>An election office is a government entity whose <em>primary</em> responsibility is overseeing elections and/or conducting voter registration.</p>
+  <p>An election office is a government entity whose primary responsibility is overseeing elections and/or conducting voter registration. If your organization is an election office, we'll prioritize your request.</p>
+
+  <h2>Is your organization an election office?</h2>
 
   <p>Answer “yes” only if the <em>main purpose</em> of your organization is to serve as an election office.</p>
 
