--- a/src/registrar/templates/application_org_contact.html
+++ b/src/registrar/templates/application_org_contact.html
@@ -2,15 +2,12 @@
 {% load field_helpers %}
 
 {% block form_instructions %}
-  <h2 class="margin-bottom-05">
-    What is the name and mailing address of your organization?
-  </h2>
+  <p>If your domain request is approved, the name of your organization and your city/state will be listed in <a href="https://beta.get.gov/about/data/" target="_blank">.gov’s public data.</a></p>  
 
-  <p>Enter the name of the organization you represent. Your organization might be part
-  of a larger entity. If so, enter information about your part of the larger entity.</p>
+  <h2>What is the name and mailing address of the organization you represent?</h2>
 
-  <p>If your domain request is approved, the name of your organization will be publicly
-  listed as the domain registrant.</p>
+  <p>Your organization might be part of a larger entity. If so, enter the name of your part of the larger entity. </p>
+
 {% endblock %}
 
 
