--- a/src/registrar/assets/sass/_theme/_tables.scss
+++ b/src/registrar/assets/sass/_theme/_tables.scss
@@ -26,16 +26,21 @@
     padding-bottom: units(2px);
   }
 
-  th.action-col-custom-width {
-    width: 24.25%;
-  }
-
-  // Fix margins in mobile view
-  @include at-media('tablet') {
-    td.tablet-margin-top-2 {
-        margin-top: 16px;
-    }
-  }
+  // Ticket #1510
+  // @include at-media('desktop') {
+  //   th:first-child {
+  //     width: 220px;
+  //   }
+  //   th:nth-child(2) {
+  //     width: 175px;
+  //   }
+  //   th:nth-child(3) {
+  //     width: 130px;
+  //   }
+  //   th:nth-child(5) {
+  //     width: 130px;
+  //   }
+  // }
 }
 
 .dotgov-table {
