Revert "Update home.html"
This reverts commit e490c5de1d70e32cbd4e7e21b5eb9856b32eafe8.

--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -90,6 +90,9 @@
               {% endif %}
             </a>
           </td>
+          {% if has_deletable_applications %}
+          <td></td>
+          {% endif %}
         </tr>
         {% endfor %}
       </tbody>
