--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -53,9 +53,9 @@
           <td data-sort-value="{{ domain.expiration_date|date:"U" }}" data-label="Expires">{{ domain.expiration_date|date }}</td>
           <td data-label="Status">
             {# UNKNOWN domains would not have an expiration date and thus would show 'Expired' #}
-            {% if domain.is_expired and domain.state != "unknown" %}
+            {% if domain.is_expired and domain.state != domain.State.UNKNOWN %}
                 Expired
-            {% elif domain.state == "unknown" or domain.state == "dns needed"%}
+            {% elif domain.state == domain.State.UNKNOWN or domain.state == domain.State.DNS_NEEDED %}
                 DNS needed
             {% else %}
                 {{ domain.state|title }}
