Refactor JS tests for page titles to test against classes instead

--- a/src/registrar/templates/application_other_contacts.html
+++ b/src/registrar/templates/application_other_contacts.html
@@ -29,7 +29,7 @@
 
     </fieldset>
 
-    <div id="other-employees">
+    <div id="other-employees" class="other-contacts-form">
         {% include "includes/required_fields.html" %}
         {{ forms.1.management_form }}
         {# forms.1 is a formset and this iterates over its forms #}
