--- a/src/registrar/templates/application_about_your_organization.html
+++ b/src/registrar/templates/application_about_your_organization.html
@@ -2,14 +2,16 @@
 {% load field_helpers %}
 
 {% block form_instructions %}
-  <p>We’d like to know more about your organization. Include the following in your response: </p>
+  <p>To help us determine your eligibility for a .gov domain, we need to know more about your organization. For example:</p>
   
     <ul class="usa-list">
       <li>The type of work your organization does </li>
-      <li>How your organization is a government organization that is independent of a state government </li>
-      <li>Include links to authorizing legislation, applicable bylaws or charter, or other documentation to support your claims.</li>
+      <li>How your organization operates independently from a  state government</li>
+      <li>A description of the specialized, essential services you offer (if applicable)</li>
+      <li>Links to authorizing legislation, applicable bylaws or charter, or other documentation to support your claims</li>
     </ul>
   </p>
+<h2>What can you tell us about your organization?</h2>
 {% endblock %}
 
 {% block form_required_fields_help_text %}
