--- a/src/registrar/templates/domain_users.html
+++ b/src/registrar/templates/domain_users.html
@@ -48,7 +48,7 @@
             <a
               id="button-toggle-user-alert-{{ forloop.counter }}"
               href="#toggle-user-alert-{{ forloop.counter }}"
-              class="usa-button--unstyled"
+              class="usa-button--unstyled text-no-underline"
               aria-controls="toggle-user-alert-{{ forloop.counter }}"
               data-open-modal
             >
