--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -72,7 +72,7 @@
             {% endif %}
           </td>
           <td>
-            <a href="{% url "domain" pk=domain.pk %}" role="button">
+            <a href="{% url "domain" pk=domain.pk %}">
               <svg
                 class="usa-icon"
                 aria-hidden="true"
@@ -136,13 +136,13 @@
           <td data-label="Status">{{ application.get_status_display }}</td>
           <td>
             {% if application.status == "started" or application.status == "action needed" or application.status == "withdrawn"  %}
-              <a href="{% url 'edit-application' application.pk %}" role="button">
+              <a href="{% url 'edit-application' application.pk %}">
               <svg class="usa-icon" aria-hidden="true" focusable="false" role="img" width="24">
                 <use xlink:href="{%static 'img/sprite.svg'%}#edit"></use>
               </svg>
               Edit <span class="usa-sr-only">{{ application.requested_domain.name|default:"New domain request" }}</span>
             {% else %}
-              <a href="{% url 'application-status' application.pk %}" role="button">
+              <a href="{% url 'application-status' application.pk %}">
               <svg class="usa-icon" aria-hidden="true" focusable="false" role="img" width="24">
                 <use xlink:href="{%static 'img/sprite.svg'%}#settings"></use>
               </svg>
