--- a/src/registrar/templates/application_current_sites.html
+++ b/src/registrar/templates/application_current_sites.html
@@ -2,7 +2,7 @@
 {% load static field_helpers %}
 
 {% block form_instructions %}
-  <p>We can better evaluate your domain request if we know about domains you’re already using.</p>
+  <p>We can better evaluate your request if we know about domains you’re already using.</p>
   <h2>What are the current websites for your organization?</h2>
   <p>Enter your organization’s current public websites. If you already have a .gov domain, include that in your list. This question is optional.</p>
 {% endblock %}
