--- a/src/registrar/templates/application_other_contacts.html
+++ b/src/registrar/templates/application_other_contacts.html
@@ -84,9 +84,9 @@
     </div>
 
     <div id="no-other-employees">
-        <fieldset class="usa-fieldset margin-top-2">
+        <fieldset class="usa-fieldset margin-top-4">
           <legend>
-            <h2>No other employees from your organization?</h2>
+            <h2 class="margin-bottom-0">No other employees from your organization?</h2>
           </legend>
           <p>You don't need to provide names of other employees now, but it may
             slow down our assessment of your eligibility. Describe why there are
