--- a/src/registrar/templates/includes/domain_example.html
+++ b/src/registrar/templates/includes/domain_example.html
@@ -40,8 +40,7 @@
   <ul class="usa-list">
     <li>AmericanSamoa.gov</li>
     <li>Colorado.gov</li>
-    <li>Georgia.gov</li>
-    <li>AmericanSamoa.gov </li>
+    <li>MN.gov</li>
     <li>Guam.gov</li>
   </ul>
 
@@ -55,45 +54,49 @@
   </ul>
 
 {% elif organization_type == 'county' %}
-  <p>Most county .gov domains must include the two-letter state abbreviation or the full state name. County names that aren’t shared by any other city, county, parish, town, borough, village or equivalent in the U.S., at the time a domain is granted, can be requested without referring to the state. Counties can include “county” in their domain to distinguish it from other places with similar names. We use the <a class="usa-link usa-link--external" rel="noopener noreferrer" target="_blank" href="https://www.census.gov/geographies/reference-files/time-series/geo/gazetteer-files.html">Census Bureau’s National Places Gazetteer Files</a> to determine if county names are unique.</p>
+  <p>Most county .gov domains must include the two-letter state abbreviation or the full state name. County names that aren’t shared by any other city, county, parish, town, borough, village or equivalent in the U.S. (at the time a domain is granted) don’t have to refer to their state in their domain name. Counties can include “county” in their domain to distinguish it from other places with similar names.</p> 
+    
+<p>We use the <a class="usa-link usa-link--external" rel="noopener noreferrer" target="_blank" href="https://www.census.gov/geographies/reference-files/time-series/geo/gazetteer-files.html">Census Bureau’s National Places Gazetteer Files</a> to determine if county names are unique.</p>
   <p><strong>Examples:</strong></p>
   <ul class="usa-list">
-    <li>AdamsCountyMS.gov</li>
-    <li>Erie.gov</li>
+    <li>LACounty.gov</li>
     <li>LivingstonParishLA.gov</li>
     <li>MitchellCountyNC.gov</li>
+    <li>MiamiDade.gov</li>
   </ul>
 
 {% elif organization_type == 'city' %}
   <p>Most city domains must include the two-letter state abbreviation or clearly spell out the state name. Using phrases like “City of” or “Town of” is optional.</p>
   <p>Cities that meet one of the criteria below don’t have to refer to their state in the domain name.
     <ul class="usa-list">
-      <li>City names that are not shared by any other U.S. city, town, or village can be requested without referring to the state. We use the <a class="usa-link usa-link--external" rel="noopener noreferrer" target="_blank" href="https://www.census.gov/geographies/reference-files/time-series/geo/gazetteer-files.html">Census Bureau’s National Places Gazetteer Files</a> to determine if names are unique.</li>
-      <li>Certain cities are so well-known that they may not require a state reference to communicate location. We use the list of U.S. “dateline cities” in the Associated Press Stylebook to make this determination.</li>
-      <li>The 50 largest cities, as measured by population according to the Census Bureau, can have .gov domain names that don’t refer to their state.</li>
+      <li>The city name is not shared by any other U.S. city, town, village, or county. We use the <a class="usa-link usa-link--external" rel="noopener noreferrer" target="_blank" href="https://www.census.gov/geographies/reference-files/time-series/geo/gazetteer-files.html">Census Bureau’s National Places Gazetteer Files</a> to determine if names are unique.</li>
+      <li>The city is so well known that it doesn’t need a state reference to communicate location. We use the list of U.S. “dateline cities” in the Associated Press Stylebook as part of our decision.</li>
+      <li>It’s one of the 150 largest cities by population, according to the Census Bureau.</li>
     </ul>
  <p><strong>Examples:</strong></p>
     <ul class="usa-list">
       <li>CityofEudoraKS.gov</li>
-      <li>Pocatello.gov</li>
       <li>WallaWallaWA.gov</li>
+      <li>Pocatello.gov</li>
     </ul>
   </p>
 
 {% elif organization_type == 'special_district' %}
-  <p>Domain names must represent your organization or institutional name, not solely the services you provide. It also needs to include your two-letter state abbreviation or clearly spell out the state name unless <a class="usa-link" rel="noopener noreferrer" target="_blank" href="{% public_site_url 'domains/choosing/#counties' %}">county or city exceptions apply</a>.</p>
+  <p>Domain names must represent your organization or institutional name, not solely the services you provide. It also needs to include your two-letter state abbreviation or clearly spell out the state name.</p>
   <p><strong>Examples:</strong></p>
   <ul class="usa-list">
-    <li>ElectionsShelbyTN.gov</li>
     <li>GlacierViewFire.gov</li>
-    <li>HVcoVote.gov</li>
     <li>TechshareTX.gov</li>
     <li>UtahTrust.gov</li>
   </ul>
 
 {% elif organization_type == 'school_district' %}
   <p>Domain names must represent your organization or institutional name.</p>
-  <p><strong>Example:</strong> mckinneyISDTX.gov </p>
+    <p><strong>Examples:</strong></p>
+  <ul class="usa-list">
+    <li>mckinneyISDTX.gov</li>
+    <li>BooneCSDIA.gov</li>
+  </ul>
   
 
 {%endif %}
