--- a/src/registrar/templates/includes/domain_example.html
+++ b/src/registrar/templates/includes/domain_example.html
@@ -71,7 +71,7 @@
     <ul class="usa-list">
       <li>The city name is not shared by any other U.S. city, town, village, or county. We use the <a class="usa-link usa-link--external" rel="noopener noreferrer" target="_blank" href="https://www.census.gov/geographies/reference-files/time-series/geo/gazetteer-files.html">Census Bureau’s National Places Gazetteer Files</a> to determine if names are unique.</li>
       <li>The city is so well known that it doesn’t need a state reference to communicate location. We use the list of U.S. “dateline cities” in the Associated Press Stylebook as part of our decision.</li>
-      <li>It’s one of the 150 largest cities by population, according to the Census Bureau.</li>
+      <li>It’s one of the 150 largest cities by population, <a class="usa-link usa-link--external" rel="noopener noreferrer" target="_blank" href="https://www.census.gov/data/tables/time-series/demo/popest/2020s-total-cities-and-towns.html">according to the Census Bureau.</a></li>
     </ul>
  <p><strong>Examples:</strong></p>
     <ul class="usa-list">
